# ort

./: .buildinfo  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  Readme.md  azure-pipelines.yml  build.py  config.html  genindex.html  index.html  install.html  objects.inv  ortmodule.html  pypi-readme.md  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  upload_python_package_to_azure_storage.py  version.txt
.github/workflows/: api-ci.yml  ci-unit_test.yaml  doc-automation.yml  docker-automation.yml  torch-ort-infer-api-ci.yml  unit-test-ci.yaml
_modules/: index.html
_sources/: install.md.txt
docker/: Dockerfile.ort-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.ort-default  Dockerfile.ort-default-stable-torch190-onnxruntime181-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-nightly-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-nightly-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.ort-rocm4.1.1-devel-ubuntu18.04  Dockerfile.ort-rocm4.2-pytorch1.8.1-ubuntu18.04  Dockerfile.ort-torch-and-onnxruntime-nightly-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-torch-and-onnxruntime-nightly-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime-nightly-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime-nightly-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime-nightly-rocm4.2-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime-stable-rocm4.2-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime181-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime181-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime-nightly-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime-nightly-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime-nightly-rocm4.2-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime181-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime181-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime190-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime190-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.torch-and-ort-nightly-cu111-cudnn8-devel-ubuntu18.04  Dockerfile.torch-ort.docs  README.md  ort-11.1.1-cudnn8-devel-ubuntu18.04-dockerfile
docs/: conf.py  content.rst  distribution_grid.md  index.rst  install.md  moe.md  ortmodule.rst
docs/sphinx/: Dockerfile  Makefile  requirements.txt
docs/tutorials/: moe_tutorial.py
ort_moe/: README.md  collectives.py  custom_ops.py  experts.py  gate_logs.py  grids.py  layers.py  loss_functions.py  moe.py  moe_config.py  setup.cfg  setup.py  topKgate.py  utils.py
ort_moe/ort_moe/: __init__.py  collectives.py  custom_ops.py  experts.py  grids.py  layers.py  moe.py  topKgate.py  utils.py
ort_moe/tests/: README.md  __init__.py  nccl_output_processor.py  pytest.ini  run_all.sh  test_compression.py  test_coverage.py  test_grid.py  test_moe.py  test_nccl.py  test_sccl_without_import.py  test_top2gating.py  test_uni_image.py  topKgate_old.py
src/eager/: .gitignore  ORTAten.cpp  ORTAtenHelper.cpp  ORTAtenHelper.h  ORTBackend.cpp  ORTGuardImpl.cpp  ORTModule.cpp  ORTOps.cpp  ORTOps.h  ORTTensor.cpp  ORTTensor.h  ORTTensorImpl.cpp  ORTTensorImpl.h  ORTUtil.cpp  ORTUtil.h  README.md  example.py  msnpu_ops.cpp  (+18 more)
src/eager/cmake/: CMakeLists.txt
tests/: __init__.py  bert_for_sequence_classification.py  moe_old.py  requirements-test.txt  test_grid.py  test_moe.py  test_top2gating.py  topKgate_old.py  torch-ort_test_api.py
tools/: readme.md
torch_ort/: __init__.py  _version.py  build.py  pypi-readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  version.txt
torch_ort_inference/: build.py  pypi-readme.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  version.txt
torch_ort_inference/demos/: bert.md  readme.md  resnet.md
torch_ort_inference/demos/notebooks/: README.md  Resnet_image_classification.ipynb  Roberta_Base_Squad2_for_Queston_Answering.ipynb  UBUNTU.md  bert_for_sequence_classification.ipynb  requirements.txt  requirments.txt
torch_ort_inference/demos/notebooks/bert_for_sequence_classification/: README.md  bert_for_sequence_classification.ipynb
torch_ort_inference/demos/notebooks/resnet_image_classification/: README.md  Resnet_image_classification.ipynb  resnet_image_classification.ipynb
torch_ort_inference/demos/notebooks/roberta-Base-squad2_for_queston_answering/: roberta_base_squad2_for_queston_answering.ipynb
torch_ort_inference/demos/notebooks/roberta-base-squad2_for_queston_answering/: README.md  roberta_base_squad2_for_queston_answering.ipynb
torch_ort_inference/docker/: Dockerfile.ort-default-stable-torch190-onnxruntime190-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-infer-stable-openvino-ubuntu18.04  Dockerfile.ort-infer-stable-openvino-ubuntu20.04  Dockerfile.ort-torch181-onnxruntime-nightly-cu102-cudnn7-devel-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime-nightly-rocm4.2-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime-stable-rocm4.2-ubuntu18.04  Dockerfile.ort-torch181-onnxruntime-stable-rocm4.3.1-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime-nightly-rocm4.3.1-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime-stable-rocm4.3.1-ubuntu18.04  Dockerfile.ort-torch190-onnxruntime190-cu102-cudnn7-devel-ubuntu18.04  README.md
torch_ort_inference/docs/: MODELS.md  install.md  usage.md
torch_ort_inference/tests/: README.md  bert_for_sequence_classification.py  resnet_image_classification.py  test_aten_fallback.py  test_openvino_provider_options.py  test_ortinferencemodule.py
torch_ort_inference/torch_ort/: __init__.py  _version.py
torch_ort_inference/torch_ort/configure/: __main__.py
torch_ort_inference/torch_ort/ortinferencemodule/: __init__.py  _custom_op_symbolic_registry.py  _utils_infer.py  ortinferencemodule.py  provider_options.py  utils.py
torch_ort_inference/torch_ort_inference/: __init__.py  _version.py
torch_ort_inference/torch_ort_inference/ortinferencemodule/: __init__.py  _utils.py  ortinferencemodule.py  provider_options.py  utils.py
(+119 files in other folders)
