[metadata]
name = torch_ort
version = 0.0.1
author = torch-ort contributors
description = Accelerate PyTorch models with ONNX Runtime
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytorch/ort
project_urls =
    Bug Tracker = https://github.com/pytorch/ort/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
